GNOME Bugzilla – Bug 708546
Critical warning from touchpad "tap-to-click" setting handler
Last modified: 2013-09-23 12:23:25 UTC
I was running g-s-d in the debugger to catch criticals from geocode-glib, but ran into one from the mouse plugin instead: mouse-plugin-DEBUG: setting handedness on Logitech USB-PS/2 Optical Mouse mouse-plugin-DEBUG: setting motion on Logitech USB-PS/2 Optical Mouse mouse-plugin-DEBUG: Setting accel 1/1, threshold 10 for device 'Logitech USB-PS/2 Optical Mouse' mouse-plugin-DEBUG: setting motion on Logitech USB-PS/2 Optical Mouse mouse-plugin-DEBUG: Setting accel 1/1, threshold 10 for device 'Logitech USB-PS/2 Optical Mouse' GLib-CRITICAL **: g_variant_get_boolean: assertion 'g_variant_is_of_type (value, G_VARIANT_TYPE_BOOLEAN)' failed Program received signal SIGTRAP, Trace/breakpoint trap. (gdb) bt
+ Trace 232519
...
Created attachment 255496 [details] [review] mouse: Fix critical warnings with touchpad settings The code was handling touchpad "left-handed" key as a boolean, but it's an enum.
Review of attachment 255496 [details] [review]: Looks good
Can you please request a freeze break for this? That might also be applicable to gnome-3-8.
Freeze break approval: https://mail.gnome.org/archives/release-team/2013-September/msg00192.html Attachment 255496 [details] pushed as e52d2c2 - mouse: Fix critical warnings with touchpad settings