mouse: Fix critical warnings with touchpad settings

The code was handling touchpad "left-handed" key as a boolean, but it's
an enum.

https://bugzilla.gnome.org/show_bug.cgi?id=708546